kubernetes/category-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: category-service
  labels:
    app: category
spec:
  ports:
  - port: 8080
    name: category-port
  clusterIP: None
  selector:
    app: category
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category
  labels:
    app: category
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
      - name: category
        image: category-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: category-port
