kubernetes/mysql-category.yaml
apiVersion: v1
kind: Service
metadata:
  name: category-db
  labels:
    app: mysql-category
spec:
  ports:
  - port: 3308
    name: mysql-port
  clusterIP: None
  selector:
    app: mysql-category
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-category
spec:
  serviceName: "mysql-category"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-category
  template:
    metadata:
      labels:
        app: mysql-category
    spec:
      containers:
      - name: mysql-category
        image: mysql-category:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3308
          name: mysql-port
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
