kubernetes/mysql-legacy.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-shop-db-image
  labels:
    app: mysql-legacy
spec:
  ports:
  - port: 3306
    name: mysql-port
  clusterIP: None
  selector:
    app: mysql-legacy
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-legacy
spec:
  serviceName: "mysql-legacy"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-legacy
  template:
    metadata:
      labels:
        app: mysql-legacy
    spec:
      containers:
      - name: mysql-legacy
        image: web-shop-db-image:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3306
          name: mysql-port
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
