kubernetes/mysql-product.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-db
  labels:
    app: mysql-product
spec:
  ports:
  - port: 3307
    name: mysql-port
  clusterIP: None
  selector:
    app: mysql-product
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-product
spec:
  serviceName: "mysql-product"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-product
  template:
    metadata:
      labels:
        app: mysql-product
    spec:
      containers:
      - name: mysql-product
        image: mysql-product:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3308
          name: mysql-port
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
