kubernetes/webshop.yaml
apiVersion: v1
kind: Service
metadata:
  name: webshop-service
  labels:
    app: webshop
spec:
  ports:
  - port: 8080
    name: webshop-port
    targetPort: 8080
  clusterIP: None
  selector:
    app: webshop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webshop
  labels:
    app: webshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webshop
  template:
    metadata:
      labels:
        app: webshop
    spec:
      containers:
      - name: webshop
        image: webshop-legacy:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: webshop-port
