kubernetes/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservices-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices
spec:
  hosts:
    - "*"
  gateways:
  - microservices-gateway
  http:
  - match:
    - uri:
        prefix: /EShop-1.0.0
    route:
    - destination:
        host: webshop-service
        port:
          number: 8080
